<resources>
    <string name="app_name">Cook Book</string>
    <string name="app_description">Recipes management</string>
    <string name="message_login_data_does_not_match">User and password does not match</string>
    <string name="message_wrong_password">Invalid password</string>
    <string name="message_wrong_email">Invalid email</string>
    <string name="message_no_internet_connection">No Internet connection. Try again later</string>
    <string name="message_cannot_execute_operation">Operation cannot be executed. Try again later</string>
    <string name="message_empty_list">Empty list</string>
    <string name="message_token_expired">Token expired or invalid. Log in again</string>
    <string name="message_confirm_action">Are you sure?</string>
    <string name="message_login_with_facebook_error">Cannot log in with Facebook. Try again</string>
    <string name="message_greeting">Hello, %s</string>
    <string name="form_login_email">Email</string>
    <string name="form_login_password">Password</string>

    <string name="label_nav_view_section_others">Others</string>
    <string name="label_nav_view_item_logout">Log out</string>

    <string name="description_logo">Application logo</string>
    <string name="description_recipe_is_favorite">Recipe is marked as favorite</string>

    <string name="title_fragment_recipes">Recipes</string>
    <string name="title_fragment_recipe_info">Info</string>
    <string name="title_fragment_recipe_ingredients">Ingredients</string>
    <string name="title_fragment_recipe_steps">Steps</string>
    <string name="title_fragment_day_plans">Day plans</string>

    <string name="label_button_cancel">Cancel</string>
    <string name="label_button_login">Login</string>
    <string name="label_button_select_date">Select date</string>
    <string name="label_button_login_with_facebook">Login with Facebook</string>
    <string name="label_recipe_name">Recipe name</string>
    <string name="label_recipe_author">Author</string>
    <string name="label_recipe_url">URL</string>
    <string name="label_recipe_description">Description</string>
    <string name="label_recipe_category">Category</string>
    <string name="label_button_search">Search</string>
    <string name="label_button_add_to_favorites">Add to favorites</string>
    <string name="label_button_remove_from_favorites">Remove from favorites</string>
    <string name="label_button_confirm">Yes, do it!</string>
    <string name="label_category_tab_all">All</string>
    <string name="label_button_add_to_day_plan">Add to day plan</string>

    <string name="placeholder_recipe_author">Pawkens</string>
    <string name="placeholder_recipe_category">Some category</string>
    <string name="placeholder_step_description">Some step description</string>
    <string name="placeholder_recipe_url">https://www.google.pl</string>
    <string name="placeholder_recipe_description">Some recipe description</string>
    <string name="placeholder_ingredient_name">Ingredient name</string>
    <string name="placeholder_ingredient_group_name">Ingredient group name</string>
    <string name="placeholder_ingredient_description">Ingredient description</string>
    <string name="placeholder_recipe_name">Recipe name</string>
    <string name="placeholder_day_plan_date">2222&#8211;02&#8211;02</string>
</resources>