<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:id="@+id/recipe_info_layout"
            style="@style/ContentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                    android:text="@string/label_recipe_name"
                    style="@style/TextViewSubheader"
                    android:textColor="@color/secondary_dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/recipe_name"
                    tools:text="@string/placeholder_recipe_name"
                    style="@style/TextViewHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                    android:text="@string/label_recipe_author"
                    style="@style/TextViewSubheader"
                    android:textColor="@color/secondary_dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/recipe_author"
                    tools:text="@string/placeholder_recipe_author"
                    style="@style/TextViewHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                    android:text="@string/label_recipe_category"
                    style="@style/TextViewSubheader"
                    android:textColor="@color/secondary_dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/recipe_category"
                    tools:text="@string/placeholder_recipe_category"
                    style="@style/TextViewHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                    android:text="@string/label_recipe_url"
                    style="@style/TextViewSubheader"
                    android:textColor="@color/secondary_dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/recipe_url"
                    tools:text="@string/placeholder_recipe_url"
                    style="@style/TextViewUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="vertical"
                android:id="@+id/tags_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                    android:text="@string/label_recipe_tags"
                    style="@style/TextViewSubheader"
                    android:textColor="@color/secondary_dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <com.google.android.material.chip.ChipGroup
                    android:id="@+id/tag_chips"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                    android:text="@string/label_recipe_description"
                    style="@style/TextViewSubheader"
                    android:textColor="@color/secondary_dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/recipe_description"
                    tools:text="@string/placeholder_recipe_description"
                    style="@style/TextViewHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <FrameLayout
                android:id="@+id/youtube_player_layout"
                android:visibility="gone"
                android:paddingVertical="@dimen/padding_margin_small"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:id="@+id/youtube_player"
                    app:enableAutomaticInitialization="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/recipe_photo_container"
                android:layout_width="match_parent"
                style="@style/ContentLayout"
                android:visibility="gone"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="match_parent"
                    android:id="@+id/recipe_photo"
                    android:layout_height="0dp"
                    android:contentDescription="@string/description_recipe_photo"
                    app:layout_constraintDimensionRatio="1:1"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>