<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal">

    <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/recipe_photo"
            android:adjustViewBounds="true"
            app:layout_constraintDimensionRatio="1:1"
            android:contentDescription="@string/description_recipe_photo"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_margin_tiny"
            android:layout_weight="1">

        <androidx.appcompat.widget.LinearLayoutCompat
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:padding="@dimen/padding_margin_tiny"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/recipe_category"
                    tools:text="@string/placeholder_recipe_category"
                    style="@style/TextViewSubheader"
                    android:textColor="@color/secondary_dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/recipe_name"
                    tools:text="@string/placeholder_recipe_name"
                    style="@style/TextViewHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/recipe_author"
                    tools:text="@string/placeholder_recipe_author"
                    style="@style/TextViewSubheader"
                    android:textColor="@color/secondary_dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatImageView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="wrap_content"
                android:src="@drawable/icon_star"
                app:tint="@color/secondary"
                android:id="@+id/recipe_is_favorite"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description_recipe_is_favorite"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatImageButton
            style="@style/ButtonTransparentImage"
            android:src="@drawable/icon_more"
            android:id="@+id/button_more"
            android:paddingHorizontal="@dimen/padding_margin_tiny"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

</androidx.appcompat.widget.LinearLayoutCompat>