<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:clickable="true"
        android:focusable="true"
        android:background="?selectableItemBackground"
        style="@style/ContentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/button_more"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/recipe_category"
                tools:text="@string/placeholder_recipe_category"
                style="@style/TextViewSubheader"
                android:textColor="@color/secondary_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/recipe_name"
                    tools:text="@string/placeholder_recipe_name"
                    style="@style/TextViewHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/author"
                tools:text="@string/placeholder_recipe_author"
                style="@style/TextViewSubheader"
                android:textColor="@color/secondary_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatImageButton
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/ButtonTransparentImage"
            android:src="@drawable/icon_more"
            android:id="@+id/button_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>